[package]
name = "turbo-delete"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwalk = "0.8.1"
futures = "0.3.31"
indicatif = "0.17.11"
owo-colors = "4.1.0"
rayon = "1.10.0"
rusty_pool = "0.7.0"

[profile.release-optimized]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1    # Reduce number of codegen units to increase optimizations.