[package]
name = "turbo-delete"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwalk = "0.8.1"
indicatif = "0.18.6"
owo-colors = "4.3.0"
rayon = "1.12.0"

[profile.release-optimized]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1    # Reduce number of codegen units to increase optimizations.

[[bin]]
name = "td"
path = "src/main.rs"